# DSA-VS

./: .gitignore  README.md  package-lock.json  setup-instructions.txt
backend/: .env.example  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma  seed-leaderboard.ts  seed.ts
backend/public/: test-client.html
backend/scripts/: populate-jahshoeah.ts  test-pipeline.ts
backend/src/: concurrent-client-handler.js  concurrent-client-handler.ts  database.test.ts  database.ts  global-match-queue.js  global-match-queue.ts  notifications.ts  server.js  server.ts  user.js  user.ts
docs/: Sprint1_Acceptance_Test_Report.docx  Sprint1_Acceptance_Test_Report.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vitest.config.js
gui/: AccountPage.cpp  AccountPage.hh  CMakeLists.txt  HomePage.hh  LoginPage.cpp  LoginPage.hh  MainWindow.hh  PageStack.cpp  PageStack.hh  SignupPage.cpp  SignupPage.hh  Window.cpp  Window.hh  bugReportDialog.ui  bugreportdialog.cpp  bugreportdialog.h  changePasswordDialog.cpp  changePasswordDialog.h  changePasswordDialog.ui  main.cpp  queueJoin.cpp  queueJoin.h  userReportDialog.cpp  userReportDialog.h  userReportDialog.ui
gui/josh_gui/: Account.cpp  Account.hh  AccountPage.hh  CMakeLists.txt  HomePage.cpp  LoginPage.cpp  LoginPage.hh  MainWindow.cpp  PageStack.cpp  PageStack.hh  ProblemPage.cpp  ProblemPage.hh  SignupPage.cpp
gui/josh_gui/signup_page/SignUpPage/: Window.cpp  Window.hh  main.cpp
infra/: docker-compose.yml
(+192 files in other folders)
